# Kako

./: .env  .env.example  .env.production  .gitignore  CONSTITUTION_COMPLETENESS_REPORT.docx  CONSTITUTION_COMPLETENESS_REPORT.md  DATABASE_BLUEPRINT.docx  DATABASE_BLUEPRINT.md  DEPLOYMENT.md  IMPLEMENTATION_BACKLOG.docx  IMPLEMENTATION_BACKLOG.md  PILOT_CUTOVER_CHECKLIST.md  README.md  RELEASE_NOTES.md  SCREEN_ARCHITECTURE.docx  SCREEN_ARCHITECTURE.md  SPEC.md  VANTORA-FINAL-PLATFORM-STATUS.md  VANTORA-FMCG-Readiness-Assessment.docx  VANTORA-Sell-Invoice-Collect-Design-Review.docx  VANTORA_CONSTITUTION_v1.docx  VANTORA_CONSTITUTION_v1.md  VANTORA_FMCG_Distribution_Pack_Design.docx  VANTORA_Full_Platform_Documentation.docx  VANTORA_MASTER_AUDIT.docx  VANTORA_MASTER_AUDIT.md  VANTORA_PR344_CloseOut_Confirmation.docx  VANTORA_PR344_Status_Report.docx  VANTORA_PhaseA_Migration_Reconciliation.docx  VANTORA_RP_Migration_DryRun_Report.docx  VANTORA_RP_Migration_Repair_Handoff.docx  gen_access.py  gen_adopt.py  gen_approval_arch.py  gen_approval_program.py  gen_approval_review.py  gen_audit.py  gen_convergence_phase2.py  gen_coverage.py  gen_diagrams.py  (+55 more)
docs/: ADAPTER-DYNAMICS-BC.md  ADAPTER-NETSUITE.md  ADAPTER-ODOO.md  ADAPTER-SAP-ONPREM.md  (+177 more)
src-tauri/: .gitignore  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitignore  README.md  icon.icns
src-tauri/resources/: postgrest.conf.template
src-tauri/shell/: index.html
src-tauri/src/: fingerprint.rs  main.rs  updater.rs
(+4150 files in other folders)
